2006-11-13  Thomas Wood  <thos@gnome.org>

	(gnome_theme_installer_run): Open transfer dialog with transient
	parent set
	
	* gnome-theme-details.c: (remove_theme), (color_select),
	(toggle_color_scheme_key), (gnome_theme_details_init),
	(update_color_buttons_from_string),
	(gnome_theme_details_update_from_gconf):
	* gnome-theme-installer.c: (gnome_theme_install_from_uri),
	* gnome-theme-installer.h:
	* gnome-theme-manager.c: (free_all),
	(gnome_theme_manager_drag_data_received_cb), (main):
	* gnome-theme-manager.h:
	* gnome-theme-save.c: (save_dialog_response):
	* theme-properties.glade:

	- Add a colours tab to change gtk-color-scheme setting

2006-10-27  Thomas Wood  <thos@gnome.org>

	* gnome-theme-installer.c: (transfer_done_cb): Hopefully fix bug
	352490

2006-10-02  Thomas Wood  <thos@gnome.org>

	* gnome-theme-manager.c: (load_meta_themes), (main): Add an
	install-theme command line option. Fixes bug 354581 - Theme manager
	has no CLI tool to install themes.

2006-09-30  Thomas Wood  <thos@gnome.org>

	* gnome-theme-details.c: (setup_tree_view):
	* theme-properties.glade:

	Allows the text in the details dialog lists to ellipsise, and sets a minimum width
	for the dialog. Fixes bug 355269 (Theme manager dialog width)

2006-08-28  Thomas Wood  <thos@gnome.org>

	* theme-properties.glade: Fixes bug 331835 (Missing maximize button)
	by making the main window Normal rather than Dialog.
	* ChangeLog: Converted to utf-8!

2006-08-21  Thomas Wood  <thos@gnome.org>

	* gnome-theme-manager.c: (queue_pixbuf_generation),
	(pixbuf_idle_func), (load_meta_themes): Applied first two patches from bug 351521

2006-07-27  Rob Bradford <robster@debian.org>

	Fixes #346041

	* gnome-theme-manager.[ch]:
	* theme-properties.glade: added support for locking down theme.

2006-07-25  Thomas Wood  <thos@gnome.org>

	* gnome-theme-details.c: (window_theme_selection_changed),
	(gnome_theme_details_update_from_gconf): Don't attempt to load window