@@ -1,3 +1,8 @@
+2006-11-27  Thomas Wood  <thos@gnome.org>
+
+	* gnome-theme-installer.c: (file_theme_type): Applied patch from
+	bug 378680 (leak in file_theme_type() in theme-switcher)
+
 2006-11-13  Thomas Wood  <thos@gnome.org>
 
 	(gnome_theme_installer_run): Open transfer dialog with transient
